Fixed overflow and Added Issues section

--- a/src/styles/EnvVisualizer.css
+++ b/src/styles/EnvVisualizer.css
@@ -2,6 +2,6 @@
     background-color: #2c3e50;
 }
 
-#env-visualizer-container {
+.sa-env-visualizer {
     overflow: auto;
 }
